--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   name             : "Ntandoyenkosi Ndlovu"
   avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio"
-  location         : "Your Location"
-  email            :
+  location         : "Somewhere in the world"
+  email            : "ntandokandlovu@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Your Github"
+  github           : "dzeksen"
   gitlab           :
   google_plus      :
   keybase          :
